syntax = "proto3";
package umee.ugov.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package                      = "github.com/umee-network/umee/v5/x/ugov";
option (gogoproto.goproto_getters_all) = false;

// EventMinGasPrice is emitted when MsgGovUpdateMinGasPrice is correctly executed.
message EventMinGasPrice {
  repeated cosmos.base.v1beta1.DecCoin min_gas_prices = 1 [(gogoproto.nullable) = false];
}
