syntax = "proto3";
package umee.ugov.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";
import "umee/ugov/v1/ugov.proto";

option go_package                      = "github.com/umee-network/umee/v5/x/ugov";
option (gogoproto.goproto_getters_all) = false;

// GenesisState of the ugov module.
message GenesisState {
  cosmos.base.v1beta1.DecCoin min_gas_price = 1 [(gogoproto.nullable) = false];

  // Emergency Group address
  string emergency_group = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // LiquidationParams is params for new liquidation inflation rate params  for staking denoms
  LiquidationParams liquidation_params = 3 [(gogoproto.nullable) = false];
  // Unix timestamp when the inflation cycle is started
  google.protobuf.Timestamp inflation_cycle_start_time = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}
